# Picking-System-ROS2

./: .gitignore  LICENSE  README.md  all_code.txt  frames_2026-03-17_22.02.48.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/coppelia_control/: CMakeLists.txt  package.xml
src/coppelia_control/config/: kinematics.yaml
src/coppelia_control/include/coppelia_control/: ManipulationInterface.hpp  PlanningInterface.hpp  VisionInterface.hpp
src/coppelia_control/launch/: bringup.launch.py  franka_control.launch.py
src/coppelia_control/meshes/: Franka_FrankaGripper_coll_1.dae  Franka_FrankaGripper_coll_2.dae  Franka_FrankaGripper_coll_3.dae  Franka_leftFinger_coll_1.dae  Franka_leftFinger_coll_2.dae  Franka_leftFinger_coll_3.dae  Franka_leftFinger_coll_4.dae  Franka_leftFinger_coll_5.dae  Franka_leftFinger_coll_6.dae  Franka_leftFinger_coll_7.dae  Franka_leftFinger_coll_8.dae  Franka_leftFinger_coll_9.dae  Franka_leftFinger_visible_vis_1.dae  Franka_leftPad_coll_1.dae  Franka_leftPad_visible_vis_1.dae  Franka_link1_resp_coll_1.dae  Franka_link1_resp_coll_2.dae  Franka_link1_resp_coll_3.dae  Franka_link1_resp_coll_4.dae  Franka_link2_resp_coll_1.dae  Franka_link2_resp_coll_2.dae  Franka_link3_resp_coll_1.dae  Franka_link3_resp_coll_2.dae  Franka_link3_resp_coll_3.dae  Franka_link3_resp_coll_4.dae  Franka_link4_resp_coll_1.dae  Franka_link4_resp_coll_2.dae  Franka_link4_resp_coll_3.dae  Franka_link4_resp_coll_4.dae  Franka_link4_resp_coll_5.dae  Franka_link4_resp_coll_6.dae  Franka_link5_resp_coll_1.dae  Franka_link5_resp_coll_2.dae  Franka_link5_resp_coll_3.dae  Franka_link5_resp_coll_4.dae  Franka_link5_resp_coll_5.dae  Franka_link5_resp_coll_6.dae  Franka_link5_resp_coll_7.dae  Franka_link5_resp_coll_8.dae  Franka_link5_resp_coll_9.dae  (+42 more)
src/coppelia_control/scripts/: diagnostic.py  doctor.py  grasp_manager.py  test.py  test2.py
src/coppelia_control/src/: ManipulationInterface.cpp  PlanningInterface.cpp  VisionInterface.cpp  franka_control_node.cpp  main.cpp
src/coppelia_control/urdf/: Franka.urdf  panda.urdf
src/coppelia_control/urdf/mesh/: panda_FrankaGripper_coll_1.dae  panda_FrankaGripper_coll_2.dae  panda_FrankaGripper_coll_3.dae  panda_leftFinger_coll_1.dae  panda_leftFinger_coll_2.dae  panda_leftFinger_coll_3.dae  panda_leftFinger_coll_4.dae  panda_leftFinger_coll_5.dae  panda_leftFinger_coll_6.dae  panda_leftFinger_coll_7.dae  panda_leftFinger_coll_8.dae  panda_leftFinger_coll_9.dae  panda_leftFinger_visible_vis_1.dae  panda_leftPad_coll_1.dae  panda_leftPad_visible_vis_1.dae  panda_link2_resp_coll_1.dae  panda_link2_resp_coll_2.dae  panda_link2_resp_coll_3.dae  panda_link2_resp_coll_4.dae  panda_link3_resp_coll_1.dae  panda_link3_resp_coll_2.dae  panda_link4_resp_coll_1.dae  panda_link4_resp_coll_2.dae  panda_link4_resp_coll_3.dae  panda_link4_resp_coll_4.dae  panda_link5_resp_coll_1.dae  panda_link5_resp_coll_2.dae  panda_link5_resp_coll_3.dae  panda_link5_resp_coll_4.dae  panda_link5_resp_coll_5.dae  panda_link5_resp_coll_6.dae  panda_link6_resp_coll_1.dae  panda_link6_resp_coll_2.dae  panda_link6_resp_coll_3.dae  panda_link6_resp_coll_4.dae  panda_link6_resp_coll_5.dae  panda_link6_resp_coll_6.dae  panda_link6_resp_coll_7.dae  panda_link6_resp_coll_8.dae  panda_link6_resp_coll_9.dae  (+42 more)
src/coppelia_vision/: package.xml  setup.cfg  setup.py
src/coppelia_vision/config/: vision_params.yaml
src/coppelia_vision/coppelia_vision/: coordinate_mapper.py  vision_node.py  visualizer.py
src/coppelia_vision/launch/: global_vision_setup.launch.py  vision_system.launch.py
src/coppelia_vision/rviz/: vision_debug.rviz
src/cs_hardware_interface/: CMakeLists.txt  cs_hardware_interface.xml
src/cs_hardware_interface/config/: controllers.yaml
src/cs_hardware_interface/include/cs_hardware_interface/: cs_system.hpp
src/cs_hardware_interface/launch/: coppelia_moveit.launch.py
src/cs_hardware_interface/src/: cs_system.cpp
src/cs_hardware_interface/urdf/: exported_panda.urdf  exported_panda_FrankaGripper_coll_1.dae  exported_panda_FrankaGripper_coll_2.dae  exported_panda_FrankaGripper_coll_3.dae  exported_panda_leftFinger_coll_1.dae  exported_panda_leftFinger_coll_2.dae  exported_panda_leftFinger_coll_3.dae  exported_panda_leftFinger_coll_4.dae  exported_panda_leftFinger_coll_5.dae  exported_panda_leftFinger_coll_6.dae  exported_panda_leftFinger_coll_7.dae  exported_panda_leftFinger_coll_8.dae  exported_panda_leftFinger_coll_9.dae  exported_panda_leftFinger_visible_vis_1.dae  exported_panda_leftPad_coll_1.dae  exported_panda_leftPad_visible_vis_1.dae  exported_panda_link2_resp_coll_1.dae  exported_panda_link2_resp_coll_2.dae  exported_panda_link2_resp_coll_3.dae  exported_panda_link2_resp_coll_4.dae  exported_panda_link3_resp_coll_1.dae  exported_panda_link3_resp_coll_2.dae  exported_panda_link4_resp_coll_1.dae  exported_panda_link4_resp_coll_2.dae  exported_panda_link4_resp_coll_3.dae  exported_panda_link4_resp_coll_4.dae  exported_panda_link5_resp_coll_1.dae  exported_panda_link5_resp_coll_2.dae  exported_panda_link5_resp_coll_3.dae  exported_panda_link5_resp_coll_4.dae  exported_panda_link5_resp_coll_5.dae  exported_panda_link5_resp_coll_6.dae  exported_panda_link6_resp_coll_1.dae  exported_panda_link6_resp_coll_2.dae  exported_panda_link6_resp_coll_3.dae  exported_panda_link6_resp_coll_4.dae  exported_panda_link6_resp_coll_5.dae  exported_panda_link6_resp_coll_6.dae  exported_panda_link6_resp_coll_7.dae  exported_panda_link6_resp_coll_8.dae  (+43 more)
src/custom_trajectory_core/: CMakeLists.txt  package.xml
src/custom_trajectory_core/include/custom_trajectory_core/: path_smoother.hpp  trapezoidal_planner.hpp
src/custom_trajectory_core/src/: path_smoother.cpp  trapezoidal_planner.cpp
src/franka_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/franka_moveit_config/config/: Franka.ros2_control.xacro  Franka.srdf  Franka.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/panda_moveit_config/: .setup_assistant  CMakeLists.txt
(+322 files in other folders)
